java-docker-k8s/kubernetes-server-app/deployment-resourced.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-app-deployment
  labels:
    app: server-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server-app
  template:
    metadata:
      labels:
        app: server-app
    spec:
      containers:
        - name: server-app
          image: server-app:latest
          ports:
          - containerPort: 8080
            name: http
          resources:
            requests:
              cpu: 1.5 # or 1500m
              memory: 2G
            limits:
              memory: 2G
