java-docker-k8s/kubernetes-server-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-app
spec:
  selector:
    app: server-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
